--- a/sc_benchmarks_poster.html
+++ b/sc_benchmarks_poster.html
@@ -33,15 +33,15 @@ Here are the required style attributes for css to make this poster work :)
 -->
 <style>
 @page {
-size: 52in 34in;
+size: 55in 40in;
 margin: 0;
 padding: 0;
 }
 body {
 margin: 0px;
 padding: 0px;
-width: 52in;
-height: 34in;
+width: 55in;
+height: 40in;
 text-align: justify;
 font-size: 45px;
 line-height: 1.05;
@@ -124,8 +124,8 @@ float: left;
 padding: 0px;
 }
 .outer {
-width: 52in;
-height: calc(34in *  (1 - 0.19 - 0.07 - 0.01) );
+width: 55in;
+height: calc(40in *  (1 - 0.18 - 0.07 - 0.01) );
 -webkit-column-count: 3; /* Chrome, Safari, Opera */
 -moz-column-count: 3; /* Firefox */
 column-count: 3;
@@ -146,7 +146,7 @@ column-rule-style: none;
 column-rule-color: black;
 background-color: #ffffff;
 font-family: Rasa;
-margin-top: calc(34in *  0.19 );
+margin-top: calc(40in *  0.18 );
 padding-top: 1em;
 padding-bottom: 1em;
 }
@@ -238,8 +238,8 @@ padding-right: 8%;
 text-align: left;
 }
 .main {
-width: 52in;
-height: calc(34in * 0.19);
+width: 55in;
+height: calc(40in * 0.18);
 position: absolute;
 background-color: #01192d;
 color: #ffffff90;
@@ -263,7 +263,7 @@ position: absolute;
 }
 #main-img-center {
 width: 10%;
-left: calc(52in * 0.45);
+left: calc(55in * 0.45);
 bottom: 0.5in;
 position: absolute;
 }
@@ -304,14 +304,14 @@ font-size: 5px;
 text-decoration: none;
 }
 .poster_wrap {
-width: 52in;
-height: 34in;
+width: 55in;
+height: 40in;
 padding: 0cm;
 }
 .main_bottom {
-width: 52in;
-height: calc(34in * 0.07);
-margin-top: calc(34in * (1 - 0.07));
+width: 55in;
+height: calc(40in * 0.07);
+margin-top: calc(40in * (1 - 0.07));
 position: absolute;
 background-color: #01192d;
 background-image: linear-gradient(#00a877 10%, #01192d);
@@ -372,7 +372,7 @@ Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://Renk
 
  Source code: <strong><a href="https://renkulab.io/gitlab/omnibenchmark" class="uri">https://renkulab.io/gitlab/omnibenchmark</a></strong><sup> </sup><br>
 
- License: Apache License, Version 2.0<sup> </sup><br>
+ License: <strong>Apache License, Version 2.0</strong><sup> </sup><br>
 
  <sup> </sup><br>
 
@@ -395,7 +395,7 @@ Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://Renk
 
 
 <p id="affiliation" class="affiliation">
-<sup>1</sup> Institute for Molecular Life Sciences, University of Zurich, Switzerland<br> <sup>2</sup> SIB Swiss Institute of Bioinformatics, Switzerland<br> <sup>3</sup> Swiss Data Science Centre, Switzerland<br> <sup>4</sup> Friedrich Miescher Institute, Basel, Switzerland<br> <sup>5</sup> D-HEST Institute for Neurosciences, ETH Zürich<br> <sup>6</sup> Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz
+<sup>1</sup> Institute for Molecular Life Sciences, University of Zurich, Switzerland<br> <sup>2</sup> SIB Swiss Institute of Bioinformatics, Switzerland<br> <sup>3</sup> Swiss Data Science Center, ETH Zurich and EPFL, Switzerland<br> <sup>4</sup> Friedrich Miescher Institute, Basel, Switzerland<br> <sup>5</sup> D-HEST Institute for Neurosciences, ETH Zürich<br> <sup>6</sup> Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz
 </p>
 </div>
 
@@ -447,7 +447,7 @@ The current benchmarking scheme has many <strong>limitations</strong>:</p>
 <li>Fully follow the <strong><code>FAIR principles</code></strong> thanks to a Docker image system, an integration with Gitlab and the full <strong><code>provenance</code></strong> (tracking of inputs, commands and generated files)</li>
 <li>Use a <strong>variety of programming languages</strong> commonly used in bioinformatics: R, Python, Bash, Julia,…</li>
 </ul>
-<p><img src="figures/omni_scheme2.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="figures/shema.png" width="90%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="section-4" class="section level1">
@@ -468,6 +468,7 @@ The research in <strong><code>single-cell</code></strong> is a perfect use-case,
 <li>Evaluating batch-effect using the LISI metric <span class="citation">(Korsunsky et al. <a href="#ref-korsunsky_fast_2019" role="doc-biblioref">2019</a>)</span> and cms score <span class="citation">(Lütge et al. <a href="#ref-lutge_cellmixs_2021" role="doc-biblioref">2021</a>)</span></li>
 <li>Exploring the results using the bettr <span class="citation">(Marini and Soneson <a href="#ref-R-bettr" role="doc-biblioref">2021</a>)</span></li>
 </ul>
+<p><img src="figures/proto.png" width="95%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="section-6" class="section level1">
 <h1></h1>
@@ -475,15 +476,16 @@ The research in <strong><code>single-cell</code></strong> is a perfect use-case,
 <div id="section-7" class="section level1">
 <h1></h1>
 <p><img src="figures/logo_renku.svg" width="20%" style="display: block; margin: auto;" /></p>
-<p><strong>RENKU</strong> is an open-source collaborative platform that provides the following features:</p>
+<p><strong>RENKU</strong> is an open and collaborative platform which provides a knowledge infrastructure for the entire research life cycle. The platform and its tools are built on top of a stack of open-source components and aims to make data science reproducible.</p>
+<p>On <strong>RENKU</strong>:</p>
 <ul>
-<li><code>knowledge infrastructure</code> that seamlessly integrates interactive sessions</li>
-<li>automatic provenance tracking</li>
-<li>GitLab CI/CD</li>
-<li>version control systems for code, data and containerized environments</li>
-<li>coupling of CI/CD components with the knowledge graph</li>
+<li><p>Fully interactive sessions can be accessed through the browser, with no local installation needed</p></li>
+<li><p>Versioning and containers ensure precise and reproducible computational environments</p></li>
+<li><p>Datasets and workflows are automatically tracked in a <strong><code>knowledge graph</code></strong>, which can be queried from within a project, a group of projects or even across deployments</p></li>
+<li><p>Workflows can be re-run or updated automatically when inputs such as datasets or scripts change</p></li>
+<li><p>CI/CD can be leveraged to automate repetitive and predictable tasks, such as fetching results of a piece of analysis to integrate into a dashboard</p></li>
 </ul>
-<p><img src="figures/renku.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="figures/renku.png" width="70%" height="70%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
