--- a/sc_benchmarks_poster.html
+++ b/sc_benchmarks_poster.html
@@ -427,7 +427,7 @@ The current benchmarking scheme has many <strong>limitations</strong>:</p>
 <h1></h1>
 </div>
 <div id="concept" class="section level1">
-<h1>CONCEPT:</h1>
+<h1>CONCEPT</h1>
 <p><span class="math inline">\(\checkmark\)</span> Here we propose a new <strong>modular</strong> and <strong>extensible</strong> framework based on a free open-source analytic platform, <strong><code>RENKU</code></strong>, to offer a continuous and open <strong><code>community benchmarking system</code></strong>.</p>
 <p><span class="math inline">\(\checkmark\)</span> The framework consists of <strong><code>data</code></strong>, <strong><code>method</code></strong> and <strong><code>metric</code></strong> repositories (or “modules”) that are connected via a <strong><code>knowledge graph</code></strong> from the <strong><code>RENKU system</code></strong>.</p>
 <p><span class="math inline">\(\checkmark\)</span> The results could then be displayed in an <strong>interactive dashboard</strong> to be openly explored by any analyst looking for recommendations of tools</p>
