--- a/sc_benchmarks_poster.html
+++ b/sc_benchmarks_poster.html
@@ -382,8 +382,8 @@ Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://Renk
     <strong>Almut Luetge</strong><sup>1,2</sup>
  <strong>Anthony Sonrel</strong><sup>1,2</sup>
  <strong>Oksana Riba Grognuz</strong><sup>3</sup>
- <strong>Izaskun Mallona Gonzalez</strong><sup>1,2</sup>
- **Charlotte Soneson<sup>2,4</sup>
+ <strong>Izaskun Mallona</strong><sup>1,2</sup>
+ <strong>Charlotte Soneson</strong><sup>2,4</sup>
  <strong>Pierre-Luc Germain</strong><sup>1,2,5</sup>
  <strong>Federico Marini</strong><sup>6</sup>
  <strong>Gavin Lee</strong><sup>3</sup>
@@ -395,7 +395,7 @@ Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://Renk
 
 
 <p id="affiliation" class="affiliation">
-<sup>1</sup> Institute for Molecular Life Sciences, University of Zurich, Switzerland<br> <sup>2</sup> SIB Swiss Institute of Bioinformatics, Switzerland<br> <sup>3</sup> Swiss Data Science Center, ETH Zurich and EPFL, Switzerland<br> <sup>4</sup> Friedrich Miescher Institute, Basel, Switzerland<br> <sup>5</sup> D-HEST Institute for Neurosciences, ETH Zürich<br> <sup>6</sup> Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz
+<sup>1</sup> Institute for Molecular Life Sciences, University of Zurich, Switzerland<br> <sup>2</sup> SIB Swiss Institute of Bioinformatics, Switzerland<br> <sup>3</sup> Swiss Data Science Center, ETH Zurich and EPFL, Switzerland<br> <sup>4</sup> Friedrich Miescher Institute, Basel, Switzerland<br> <sup>5</sup> D-HEST Institute for Neurosciences, ETH Zürich, Switzerland<br> <sup>6</sup> Center for Thrombosis and Hemostasis (CTH), Johannes Gutenberg University Mainz, Germany
 </p>
 </div>
 
@@ -417,9 +417,9 @@ Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://Renk
 <h1>BACKGROUND</h1>
 <p><strong>Benchmarking</strong> is a critical step for the development of bioinformatic methods and provides important insights for their application.<br />
 The current benchmarking scheme has many <strong>limitations</strong>:</p>
-<p>– it is a <strong><code>snapshot</code></strong> of the available methods at a certain time point<br />
-– it can be <strong><code>outdated</code></strong>, already at the time of a publication<br />
-– <strong><code>low comparability</code></strong>: different procedures, different datasets, different evaluation criteria<br />
+<p>– it is a <strong><code>snapshot</code></strong> of the available methods at a certain time point.<br />
+– it can be <strong><code>outdated</code></strong>, already at the time of a publication.
+– <strong><code>low comparability</code></strong>: different procedures, different datasets, different evaluation criteria.
 – all of the above can lead to <strong><code>different conclusions</code></strong> among benchmarks made at different time points or at different groups.</p>
 <p><br/></p>
 </div>
@@ -430,20 +430,20 @@ The current benchmarking scheme has many <strong>limitations</strong>:</p>
 <h1>CONCEPT</h1>
 <p><span class="math inline">\(\checkmark\)</span> Here we propose a new <strong>modular</strong> and <strong>extensible</strong> framework based on a free open-source analytic platform, <strong><code>RENKU</code></strong>, to offer a continuous and open <strong><code>community benchmarking system</code></strong>.</p>
 <p><span class="math inline">\(\checkmark\)</span> The framework consists of <strong><code>data</code></strong>, <strong><code>method</code></strong> and <strong><code>metric</code></strong> repositories (or “modules”) that are connected via a <strong><code>knowledge graph</code></strong> from the <strong><code>RENKU system</code></strong>.</p>
-<p><span class="math inline">\(\checkmark\)</span> The results could then be displayed in an <strong>interactive dashboard</strong> to be openly explored by any analyst looking for recommendations of tools</p>
-<p><span class="math inline">\(\checkmark\)</span> Any new data, method or metric can be added by the <strong>community</strong> to extend the benchmark</p>
+<p><span class="math inline">\(\checkmark\)</span> The results could then be displayed in an <strong>interactive dashboard</strong> to be openly explored by any analyst looking for recommendations of tools.</p>
+<p><span class="math inline">\(\checkmark\)</span> Any new data, method or metric can be added by the <strong>community</strong> to extend the benchmark.</p>
 <div id="key-features-of-the-developed-benchmarking-framework" class="section level3">
 <h3>Key features of the developed benchmarking framework:</h3>
 <ul>
 <li>Update the results of the benchmark periodically to provide the analysts with the latest recommendations</li>
-<li>Be easily extended thanks to templates for data, methods or metrics</li>
-<li>Fully follow the <strong><code>FAIR principles</code></strong> thanks to a Docker image system, an integration with Gitlab and the full <strong><code>provenance</code></strong> (tracking of inputs, commands and generated files)</li>
+<li>Easy extendable thanks to templates for data, methods or metrics</li>
+<li>Follow the <strong><code>FAIR principles</code></strong> thanks to a Docker image system, an integration with Gitlab and the full <strong><code>provenance</code></strong> (tracking of inputs, commands and generated files)</li>
 <li>Use a <strong>variety of programming languages</strong> commonly used in bioinformatics: R, Python, Bash, Julia,…</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:omni"></span>
-<img src="figures/renku_shema.png" alt="Overview of the proposed benchmarking framework on the Renku platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community and trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of Renku and contain Docker images to provide fully reproducible results." width="90%" />
+<img src="figures/renku_shema.png" alt="Overview of the proposed benchmarking framework on the RENKU platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community to trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of RENKU and contain Docker images to provide fully reproducible results." width="90%" />
 <p class="caption">
-Figure 1: Overview of the proposed benchmarking framework on the Renku platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community and trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of Renku and contain Docker images to provide fully reproducible results.
+Figure 1: Overview of the proposed benchmarking framework on the RENKU platform. Each step of the benchmark consists of a set of repositories (a.k.a “modules”) that perform a coordinated task (e.g. standardized data processing). Any new data, method or metric can be easily integrated in the framework by the scientific community to trigger a continuous delivery to the analysts with up-to-date recommendations. Each component of the framework is automatically tracked by the knowledge graph of RENKU and contain Docker images to provide fully reproducible results.
 </p>
 </div>
 <p><br/></p>
@@ -454,20 +454,20 @@ Figure 1: Overview of the proposed benchmarking framework on the Renku platform.
 </div>
 <div id="prototype" class="section level1">
 <h1>PROTOTYPE</h1>
-<p>Based on the above concept, we are currently building a prototype for community-based benchmarking of single cell batch correction methods.
-The research in <strong><code>single-cell</code></strong> is a perfect use-case, where 900 tools have been developed in only a few years <span class="citation">[1]</span> and where the benchmarking efforts are often <strong>not</strong> <strong><code>coordinated</code></strong>, <strong>not</strong> <strong><code>extendable</code></strong> and <strong>not</strong> <strong><code>reproducible</code></strong>.</p>
+<p>Based on the above concept, we are currently building a prototype for community-based benchmarking of single-cell batch correction methods.
+Research in <strong>single-cell RNA-seq (scRNA-seq)</strong> is a perfect use case, where 900 tools have been developed in only a few years <span class="citation">[1]</span> and where the benchmarking efforts are often <strong>not</strong> <strong><code>coordinated</code></strong>, <strong>not</strong> <strong><code>extendable</code></strong> and <strong>not</strong> <strong><code>reproducible</code></strong>.</p>
 <p><strong><em>Our prototype consists of</em></strong>:</p>
 <ul>
-<li>Two datasets of 2370 genes x 3613 cells separated in 2 batches and 1401 genes x 13575 cells separated in 3 batches <span class="citation">[2, 3]</span></li>
+<li>Two datasets of 2370 genes x 3613 cells separated in 2 batches and 1401 genes x 13575 cells separated in 3 batches <span class="citation">[2, 3]</span>.</li>
 <li>Common preprocessing consisting of normalization, highly-variable genes selection, dimensionality reduction.</li>
-<li>An integration using the MNN method <span class="citation">[4]</span></li>
-<li>Evaluating batch-effect using the LISI metric <span class="citation">[5]</span> and cms score <span class="citation">[3]</span></li>
-<li>Exploring the results using the bettr <span class="citation">[6]</span></li>
+<li>An integration using the MNN method <span class="citation">[4]</span>.</li>
+<li>Evaluating batch-effect using the LISI metric <span class="citation">[5]</span> and cms score <span class="citation">[3]</span>.</li>
+<li>Exploring the results using the interactive browser bettR <span class="citation">[6]</span>.</li>
 </ul>
 <div class="figure" style="text-align: center"><span id="fig:proto1"></span>
-<img src="figures/proto_small.png" alt="Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the Renku knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages." width="95%" />
+<img src="figures/proto_small.png" alt="Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the RENKU knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages." width="95%" />
 <p class="caption">
-Figure 2: Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the Renku knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages.
+Figure 2: Example of the proposed framework applied to benchmark batch correction methods of scRNA-seq data. Datasets are uniformly processed and passed to a batch-correction method of a separated module. Results are displayed in a shiny app for an interactive exploration of the results. All modules are connected through the RENKU knowledge graph, which allows to track workflows from a set of repositories using different environments and programming languages.
 </p>
 </div>
 <p><br/></p>
@@ -481,11 +481,11 @@ Figure 2: Example of the proposed framework applied to benchmark batch correctio
 <p><strong>RENKU</strong> is an open and collaborative platform which provides a knowledge infrastructure for the entire research life cycle. The platform and its tools are built on top of a stack of open-source components and aims to make data science reproducible.</p>
 <p>On <strong>RENKU</strong>:</p>
 <ul>
-<li><p>Fully interactive sessions can be accessed through the browser, with no local installation needed</p></li>
-<li><p>Versioning and containers ensure precise and reproducible computational environments</p></li>
-<li><p>Datasets and workflows are automatically tracked in a <strong><code>knowledge graph</code></strong>, which can be queried from within a project, a group of projects or even across deployments</p></li>
-<li><p>Workflows can be re-run or updated automatically when inputs such as datasets or scripts change</p></li>
-<li><p>CI/CD can be leveraged to automate repetitive and predictable tasks, such as fetching results of a piece of analysis to integrate into a dashboard</p></li>
+<li><p>As RENKU is based on cloud computing fully interactive sessions can be accessed through the browser, with no local installation needed or through a CLI.</p></li>
+<li><p>Versioning and containers ensure precise and reproducible computational environments.</p></li>
+<li><p>Datasets and workflows are automatically tracked in a <strong><code>knowledge graph</code></strong>, which can be queried from within a project, a group of projects or even across deployments.</p></li>
+<li><p>Workflows can be re-run or updated automatically when inputs such as datasets or scripts change.</p></li>
+<li><p>CI/CD can be leveraged to automate cumbersome tasks, such as fetching results of a piece of analysis to integrate into a dashboard.</p></li>
 </ul>
 <p><img src="figures/renku.png" width="70%" height="70%" style="display: block; margin: auto;" /></p>
 </div>
@@ -493,29 +493,29 @@ Figure 2: Example of the proposed framework applied to benchmark batch correctio
 <h1>References</h1>
 <div id="refs" class="references">
 <div id="ref-zappia_exploring_2018">
-<p>1. Zappia L, Phipson B, Oshlack A (2018) Exploring the single-cell RNA-seq analysis landscape with the scRNA-tools database. PLOS Computational Biology 14:e1006245. <a href="https://doi.org/10.1371/journal.pcbi.1006245">https://doi.org/10.1371/journal.pcbi.1006245</a></p>
+<p>1. Zappia L, Phipson B, Oshlack A. Exploring the single-cell RNA-seq analysis landscape with the scRNA-tools database. PLOS Computational Biology. 2018;14:e1006245. doi:<a href="https://doi.org/10.1371/journal.pcbi.1006245">10.1371/journal.pcbi.1006245</a>.</p>
 </div>
 <div id="ref-su_cellbench_2020">
-<p>2. Su S, Tian L, Dong X, et al (2020) CellBench: R/Bioconductor software for comparing single-cell RNA-seq analysis methods. Bioinformatics 36:2288–2290. <a href="https://doi.org/10.1093/bioinformatics/btz889">https://doi.org/10.1093/bioinformatics/btz889</a></p>
+<p>2. Su S, Tian L, Dong X, Hickey PF, Freytag S, Ritchie ME. CellBench: R/Bioconductor software for comparing single-cell RNA-seq analysis methods. Bioinformatics. 2020;36:2288–90. doi:<a href="https://doi.org/10.1093/bioinformatics/btz889">10.1093/bioinformatics/btz889</a>.</p>
 </div>
 <div id="ref-lutge_cellmixs_2021">
-<p>3. Lütge A, Zyprych-Walczak J, Kunzmann UB, et al (2021) CellMixS: Quantifying and visualizing batch effects in single-cell RNA-seq data. Life Science Alliance 4: <a href="https://doi.org/10.26508/lsa.202001004">https://doi.org/10.26508/lsa.202001004</a></p>
+<p>3. Lütge A, Zyprych-Walczak J, Kunzmann UB, Crowell HL, Calini D, Malhotra D, et al. CellMixS: Quantifying and visualizing batch effects in single-cell RNA-seq data. Life Science Alliance. 2021;4. doi:<a href="https://doi.org/10.26508/lsa.202001004">10.26508/lsa.202001004</a>.</p>
 </div>
 <div id="ref-haghverdi_batch_2018">
-<p>4. Haghverdi L, Lun ATL, Morgan MD, Marioni JC (2018) Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors. Nature Biotechnology 36:421–427. <a href="https://doi.org/10.1038/nbt.4091">https://doi.org/10.1038/nbt.4091</a></p>
+<p>4. Haghverdi L, Lun ATL, Morgan MD, Marioni JC. Batch effects in single-cell RNA-sequencing data are corrected by matching mutual nearest neighbors. Nature Biotechnology. 2018;36:421–7. doi:<a href="https://doi.org/10.1038/nbt.4091">10.1038/nbt.4091</a>.</p>
 </div>
 <div id="ref-korsunsky_fast_2019">
-<p>5. Korsunsky I, Millard N, Fan J, et al (2019) Fast, sensitive and accurate integration of single-cell data with Harmony. Nature Methods 16:1289–1296. <a href="https://doi.org/10.1038/s41592-019-0619-0">https://doi.org/10.1038/s41592-019-0619-0</a></p>
+<p>5. Korsunsky I, Millard N, Fan J, Slowikowski K, Zhang F, Wei K, et al. Fast, sensitive and accurate integration of single-cell data with Harmony. Nature Methods. 2019;16:1289–96. doi:<a href="https://doi.org/10.1038/s41592-019-0619-0">10.1038/s41592-019-0619-0</a>.</p>
 </div>
 <div id="ref-R-bettr">
-<p>6. Marini F, Soneson C (2021) Bettr: A better way to explore what is best</p>
+<p>6. Marini F, Soneson C. Bettr: A better way to explore what is best. 2021. <a href="https://github.com/federicomarini/bettr">https://github.com/federicomarini/bettr</a>. Accessed 19 Jul 2021.</p>
 </div>
 </div>
 </div>
 
 </div>
 <div class="main">
-<p>Continous benchmarking of single cell tools using <strong>renku</strong></p>
+<p>Continous benchmarking of single-cell tools using <strong>RENKU</strong></p>
 </div>
 <div class="main_bottom">
 <img id="main-img-left" src=figures/sib_org.png>
