--- a/sc_benchmarks_poster.html
+++ b/sc_benchmarks_poster.html
@@ -368,7 +368,7 @@ span > #tab:mytable {
 <h1 id="title"><strong>A framework for open and continuous community benchmarking of bioinformatic tools</strong></h1><br>
 <h3 id="author" class="author">
 
-Project Website: <strong><a href="https://RenkuLab.io/" class="uri">https://RenkuLab.io/</a></strong><sup> </sup><br>
+Project Website: <strong><a href="https://renkulab.io/projects/omnibenchmark" class="uri">https://renkulab.io/projects/omnibenchmark</a></strong><sup> </sup><br>
 
  Source code: <strong><a href="https://renkulab.io/gitlab/omnibenchmark" class="uri">https://renkulab.io/gitlab/omnibenchmark</a></strong><sup> </sup><br>
 
